--- a/economia.html
+++ b/economia.html
@@ -13,7 +13,7 @@
         <h1>Portal de Fatos</h1>
         <nav>
             <ul>
-                <a href="indexx.html">Saúde</a>
+                <a href="index.html">Saúde</a>
                 <a href="brasil.html">Brasil</a>
                 <a href="economia.html">Economia</a>
             </ul>
